Logic for register